@@ -33,8 +33,7 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 /// We've been sent a message from another app
 enum obd_dbus_message {
 	OBD_DBUS_NOMESSAGE, ///< No Message waiting at this time
-	OBD_DBUS_STARTTRIP, ///< Start a trip
-	OBD_DBUS_ENDTRIP, ///< End a trip
+	OBD_DBUS_STARTTRIP ///< Start a trip
 };
 
 /// Handle any dbus messages we've been sent
